include/swift/AST/SourceFile.h
@@ -30,7 +30,6 @@ class SourceFile final : public FileUnit {
   friend class ParseSourceFileRequest;
 
 public:
-  class Impl;
   struct SourceFileSyntaxInfo;
 
   /// Possible attributes for imports in source files.
@@ -198,7 +197,6 @@ private:
       ParserStatePtr(/*ptr*/ nullptr, /*deleter*/ nullptr);
 
   friend ASTContext;
-  friend Impl;
 
 public:
   /// Appends the given declaration to the end of the top-level decls list. Do
